--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#/">Home</a></li>
+            <li class="active"><a href="https://app72201631.auth0.com/v2/logout/">Logout</a></li>
           </ul>
         </div>
       </div>
